--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -37,9 +37,9 @@
     <mat-list *ngFor="let item of items">
       <!-- Item address and item score -->
       <mat-list-item>
-        <button mat-mini-fab>{{ item.score }}</button>
+        <button mat-mini-fab style="margin-right:20px;">{{ item.score }}</button>
         {{ item.address }}
-        <mat-icon mat-list-icon routerLink="'/item', item.addressid" routerLinkActive="active">edit</mat-icon>
+        <mat-icon style="margin-left:10px;" routerLink="'/item/', item.addressid" routerLinkActive="active">edit</mat-icon>
       </mat-list-item>
       <mat-divider></mat-divider>
     </mat-list>
