not showing warning on empty list

--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -39,7 +39,7 @@
       <mat-list-item>
         <button mat-mini-fab style="margin-right:20px;">{{ item.score }}</button>
         {{ item.address }}
-        <mat-icon style="margin-left:10px; cursor:pointer;" routerLink="'/item/', item.addressID" routerLinkActive="active">edit</mat-icon>
+        <mat-icon style="margin-left:10px; cursor:pointer;" routerLink="'/item', item.addressID" routerLinkActive="active">edit</mat-icon>
       </mat-list-item>
       <mat-divider></mat-divider>
     </mat-list>
