--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -19,7 +19,7 @@
         <mat-icon style="color: #f49500" mat-list-icon>warning</mat-icon>
         <h4 style="font-weight:bold" mat-line>No items found.</h4>
         <p mat-line>Uh-oh! Looks like you haven't made any items yet.
-          <a style="color: green" routerLink="/item" routerLinkActive="active">Make a item here.</a>
+          <a style="color: green" routerLink="/item" routerLinkActive="active">Make an item here.</a>
         </p>
       </mat-list-item>
     </mat-list>
@@ -39,7 +39,7 @@
       <mat-list-item>
         <button mat-mini-fab style="margin-right:20px;">{{ item.score }}</button>
         {{ item.address }}
-        <mat-icon style="margin-left:10px; cursor:pointer;" routerLink="'/item', item.addressID" routerLinkActive="active">edit</mat-icon>
+        <mat-icon style="margin-left:10px; cursor:pointer;" [routerLink]="['/item', item.addressID]" routerLinkActive="active">edit</mat-icon>
       </mat-list-item>
       <mat-divider></mat-divider>
     </mat-list>
