try try try again yo

--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -68,7 +68,7 @@
   <button *ngIf="!firstSave" mat-raised-button color="primary" (click)="saveItem()">
     Save Changes
   </button>
-  <button mat-raised-button routerLink="/form" routerLinkActive="active">
+  <button mat-raised-button routerLink="/leaderboard" routerLinkActive="active">
     Cancel
   </button>
 </div>
