manual testin it now

--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -71,6 +71,9 @@
   <button mat-raised-button (click)="calcScore()">
     Calculate score
   </button>
+  <button mat-raised-button (click)="checkReady()">
+    Check Ready
+  </button>
   <button mat-raised-button routerLink="/leaderboard" routerLinkActive="active">
     Cancel
   </button>
