test the recalculate all scores

--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -27,6 +27,9 @@
   <button mat-raised-button color="primary" (click)="getItems()">
     Refresh
   </button>
+  <button mat-raised-button color="primary" (click)="recalculateAllScores()">
+    Recalculate all scores
+  </button>
   <button mat-mini-fab (click)="sortItems()">
     <mat-icon aria-label="Sort descending/ascending">sort</mat-icon>
   </button>
