--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -24,10 +24,10 @@
       </mat-list-item>
     </mat-list>
   </div>
-  <button mat-raised-button color="primary" (click)="getItems()">
+  <button mat-raised-button (click)="getItems()">
     Refresh
   </button>
-  <button mat-raised-button color="primary" (click)="recalculateAllScores()">
+  <button mat-raised-button (click)="recalculateAllScores()">
     Recalculate all scores
   </button>
   <button mat-mini-fab (click)="sortItems()">
@@ -40,7 +40,7 @@
     <mat-list *ngFor="let item of items">
       <!-- Item address and item score -->
       <mat-list-item>
-        <button mat-mini-fab style="margin-right:20px;">{{ item.score }}</button>
+        <button mat-mini-fab color="white" style="margin-right:20px;">{{ item.score }}</button>
         {{ item.address }}
         <mat-icon style="margin-left:10px; cursor:pointer;" [routerLink]="['/item', item.addressID]" routerLinkActive="active">edit</mat-icon>
       </mat-list-item>
