added image gallery

--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -16,10 +16,10 @@
   width:30px;
 }
 .green{
-  background-color: #008171 !important;
+  background-color: #669966 !important;
 }
 .lightgreen{
-  background-color: #94b777 !important;
+  background-color: #99CC66 !important;
 }
 .greytext{
   color:#663333;
