--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -3,7 +3,7 @@
 <div *ngIf="!formReady">
   <mat-list>
     <mat-list-item>
-      <mat-icon style="color: #f49500" mat-list-icon>warning</mat-icon>
+      <mat-icon style="color: #663333" mat-list-icon>warning</mat-icon>
       <h4 style="font-weight:bold" mat-line>No form found.</h4>
       <p mat-line>Uh-oh! Looks like you haven't made a form yet.
         <a style="color: green" routerLink="/form" routerLinkActive="active">Make a form here.</a>
