--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,11 +15,7 @@
         <br />
         <br />
       </p>
-      <p style="font-weight: bold; list-style: none; color:white">
-        <a style="color: #fff" href="#">Home Buying</a>&nbsp;&nbsp;
-        <a style="color: #fff" href="#">Game Scorekeeping</a>&nbsp;&nbsp;
-        <a style="color: #fff" href="#">Negotiation</a>
-      </p>
+      <gallery [items]="images"></gallery>
     </div>
     <p style="text-align: right"><a href="https://docs.google.com/forms/d/e/1FAIpQLSej2dSOsA2gMeI4V7Uf27ViJhYwCiZGb-Zc-cj1JVxBS7c8VA/viewform?usp=sf_link" target="_blank">Report a Bug</a> | Objective Assessor is MIT-licensed. Built by <a href="https://github.com/cloette" target="_blank">Cloette</a>. Last updated 8.20.2018.</p>
   </div>
