--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -3,7 +3,7 @@
 <div *ngIf="!formReady">
   <mat-list>
     <mat-list-item>
-      <mat-icon style="color: #f49500" mat-list-icon>warning</mat-icon>
+      <mat-icon style="color: #663333" mat-list-icon>warning</mat-icon>
       <h4 style="font-weight:bold" mat-line>No form found.</h4>
       <p mat-line>Uh-oh! Looks like you haven't made a form yet.
         <a style="color: green" routerLink="/form" routerLinkActive="active">Make a form here.</a>
@@ -16,7 +16,7 @@
   <div *ngIf="warning">
     <mat-list>
       <mat-list-item>
-        <mat-icon style="color: #f49500" mat-list-icon>warning</mat-icon>
+        <mat-icon style="color: #663333" mat-list-icon>warning</mat-icon>
         <h4 style="font-weight:bold" mat-line>No items found.</h4>
         <p mat-line>Uh-oh! Looks like you haven't made any items yet.
           <a style="color: green" routerLink="/item" routerLinkActive="active">Make an item here.</a>
