--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,6 @@
+@import '~@ngx-gallery/core/styles/css/gallery.css';
+@import './custom_theme.css';
+
 /* You can add global styles to this file, and also import other style files */
 body {
   background-color: #f8f8f8;
@@ -22,5 +25,3 @@ body {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
-
-@import './custom_theme.css';
