--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -40,6 +40,7 @@
 
 <div *ngIf="!firstVisit">
   <div *ngIf="dataReady">
+    <h3>{{ formId }}</h3>
     <div class="floating-button">
       <button type="button" mat-fab (click)="openDialog(newField,9,true)">
         <!-- Displays add field form -->
