--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -16,10 +16,10 @@
   <div *ngIf="warning">
     <mat-list>
       <mat-list-item>
-        <mat-icon style="color: #f49500" mat-list-icon>warning</mat-icon>
+        <mat-icon style="color: #663333" mat-list-icon>warning</mat-icon>
         <h4 style="font-weight:bold" mat-line>No items found.</h4>
         <p mat-line>Uh-oh! Looks like you haven't made any items yet.
-          <a style="color: green" routerLink="/item" routerLinkActive="active">Make an item here.</a>
+          <a style="color: #669966" routerLink="/item" routerLinkActive="active">Make an item here.</a>
         </p>
       </mat-list-item>
     </mat-list>
