--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,3 +15,7 @@ h4{
 h1{
   font-size:60;
 }
+::ng-deep .mat-line, .mat-list-text{
+  word-wrap: break-word !important;
+  white-space: pre-wrap !important;
+}
