--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -5,8 +5,7 @@
     <mat-list-item>
       <mat-icon style="color: #663333" mat-list-icon>warning</mat-icon>
       <h4 style="font-weight:bold" mat-line>No form found.</h4>
-      <p mat-line>Uh-oh! Looks like you haven't made a form yet.
-        <a style="color: 669966" routerLink="/form" routerLinkActive="active">Make a form here.</a>
+      <p mat-line>Uh-oh! Looks like you haven't made a form yet. <a style="color: #669966" routerLink="/form" routerLinkActive="active">Make a form here.</a>
       </p>
     </mat-list-item>
   </mat-list>
