--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -16,8 +16,7 @@
     <mat-list-item>
       <mat-icon style="color: #663333" mat-list-icon>warning</mat-icon>
       <h4 style="font-weight:bold" mat-line>No item found.</h4>
-      <p mat-line>Uh-oh! Looks like this item was deleted.
-        <a style="color: 669966" routerLink="/item" routerLinkActive="active">Make a new one here.</a>
+      <p mat-line>Uh-oh! Looks like this item was deleted. <a style="color: 669966" routerLink="/item" routerLinkActive="active">Make a new one here.</a>
       </p>
     </mat-list-item>
   </mat-list>
