--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -11,12 +11,12 @@
   </mat-list>
 </div>
 
-<div *ngIf="formReady && noItemError">
+<div *ngIf="noItemError">
   <mat-list>
     <mat-list-item>
       <mat-icon style="color: #663333" mat-list-icon>warning</mat-icon>
       <h4 style="font-weight:bold" mat-line>No item found.</h4>
-      <p mat-line>Uh-oh! Looks like this item was deleted. <a style="color: 669966" routerLink="/item" routerLinkActive="active">Make a new one here.</a>
+      <p mat-line>Uh-oh! Looks like this item was deleted. <a style="color: 669966" routerLink="/item" routerLinkActive="active">Make a new one here.</a> If you believe the item still exists, try refreshing the page.
       </p>
     </mat-list-item>
   </mat-list>
