--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -1,7 +1,12 @@
 .footer-wrapper{
-  display:absolute;
-  position: bottom;
-  width:100%;
-  height: auto;
+  display: block;
+  position: fixed;
+  bottom: 0;
+  right: 0;
   background: #f8f8f8;
+  z-index:5;
+  padding: 0 16px;
+}
+.footer-wrapper .a{
+  color: #669966;
 }
