--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -9,7 +9,7 @@ a {
   position: absolute;
   top: 0;
   right: 0;
-  height: 450px;
+  height: 180px;
   width: 100%;
   z-index: -1;
 }
@@ -17,7 +17,19 @@ a {
   background: #99cc66;
 }
 .green{
-  top: 450px;
+  top: 480px;
   background: #99cc66; /* For browsers that do not support gradients
   background: linear-gradient(to bottom, #99CC66, #669966, #99CC66); */
+}
+.use-case-imgs{
+  display: inline-block;
+  text-align:center;
+  margin-top:60px;
+}
+.use-case-imgs img{
+  max-width: 250px;
+  height: auto;
+  border: solid 16px #669966;
+  border-radius: 10px;
+  margin: 10px;
 }
