--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="padded">
   <div *ngIf="!auth.isAuthenticated()">
     <div class="background-block"></div>
-    <div style="max-width:400px; min-height: 400px">
+    <div style="max-width:380px; min-height: 400px">
       <h1>Tough decision?</h1>
       <h3 style="color:#5a5a5a">Objective assessor compares and scores options - so you don't have to!</h3>
       <p>Utilize weighted scoring systems, toggle values on the fly, and see your best options at a glance; anytime, anywhere,
@@ -11,15 +11,15 @@
     <div class="background-block green"></div>
     <div style="min-height: 400px; text-align: right">
       <h1>Explore Use Cases</h1>
-      <p>See screenshots of what Objective Assessor looks like in action.
-        <br />
-        <br />
-      </p>
-      <p style="font-weight: bold; list-style: none; color:white">
-        <a style="color: #fff" href="#">Home Buying</a>&nbsp;&nbsp;
-        <a style="color: #fff" href="#">Game Scorekeeping</a>&nbsp;&nbsp;
-        <a style="color: #fff" href="#">Negotiation</a>
-      </p>
+      <p>See screenshots of what Objective Assessor looks like in action.</p>
+      <div class="use-case-imgs">
+        <img src="./../../assets/House1.JPG" alt="Sample Form - House Hunting Use Case" />
+        <img src="./../../assets/house2.JPG" alt="Sample Leaderboard - House Hunting Use Case" />
+        <img src="./../../assets/house3.JPG" alt="Sample Item - House Hunting Use Case" />
+        <img src="./../../assets/editfield.JPG" alt="Sample Field - Form creation" />
+        <img src="./../../assets/game1.JPG" alt="Sample Form - Game Use Case" />
+        <img src="./../../assets/Game2.JPG" alt="Sample Leaderboard - Game Use Case" />
+      </div>
     </div>
   </div>
   <div *ngIf="auth.isAuthenticated()">
