--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,6 @@
+<div class="footer-space">
+  <p style="text-align: right">Report a Bug | Objective Assessor is MIT-licensed. Built by Cloette. Last updated 8.20.2018.</p>
+</div>
 <div class="footer-wrapper">
   <p style="text-align: right"><a href="https://docs.google.com/forms/d/e/1FAIpQLSej2dSOsA2gMeI4V7Uf27ViJhYwCiZGb-Zc-cj1JVxBS7c8VA/viewform?usp=sf_link"
       target="_blank">Report a Bug</a> | Objective Assessor is MIT-licensed. Built by <a href="https://github.com/cloette"
