--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,8 +1,8 @@
 <h2>Item</h2>
 
-<button mat-raised-button (click)="checkReady()">
+<!--<button mat-raised-button (click)="checkReady()">
   Refresh
-</button>
+</button> -->
 
 <div *ngIf="!formReady">
   <mat-list>
