form displays ID, home shown after login?

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="mobile-container" *ngIf="auth.isAuthenticated()">
     <app-ui-top-navigation></app-ui-top-navigation>
-    <router-outlet></router-outlet>
+    <router-outlet><app-home></app-home></router-outlet>
   </div>
   <app-footer></app-footer>
 </div>
