--- a/src/app/form/dialog/dialog.html
+++ b/src/app/form/dialog/dialog.html
@@ -41,7 +41,7 @@
           <mat-form-field>
             <h4>Value</h4>
             <input matInput type="number" [(ngModel)]="optionsValue" name="optionValue">
-            <mat-hint align="start">Value of this option (number)</mat-hint>
+            <mat-hint align="start">Value of this option (number for radio and dropdowns, for checkboxes 0=unchecked 1=checked)</mat-hint>
           </mat-form-field>
           <br />
           <br />
