--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -17,9 +17,9 @@
   <br />
   <br />
   <div *ngIf="showFormIDField">
-    <form class="form">
+    <form class="form-horizontal">
       <mat-form-field style="margin-right: 20px;">
-        <input matInput label="getSForm" placeholder="Enter an ID here" [formControl]="formID" />
+        <input matInput label="getSForm" placeholder="Enter an ID here" [formControl]="getSpecificForm" />
       </mat-form-field>
       <button type="button" mat-raised-button (click)="updateFormID()">Fetch form</button>
       <br />
@@ -27,9 +27,9 @@
     </form>
   </div>
   <div *ngIf="showSpecificFormField">
-    <form class="form">
+    <form class="form-horizontal">
       <mat-form-field style="margin-right: 20px;">
-        <input matInput label="createSForm" placeholder="Enter an ID here" [formControl]="formID" />
+        <input matInput label="createSForm" placeholder="Enter an ID here" [formControl]="newSpecificForm" />
       </mat-form-field>
       <button type="button" mat-raised-button (click)="makeSpecificForm()">Create form</button>
       <br />
