id is not a field

--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -3,7 +3,7 @@
   padding: 20px;
   position: absolute;
   margin-top: -85px;
-  margin-left: 200px;
+  margin-right: 20px;
 }
 .column-layout{
   display: inline-flex;
