--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -40,7 +40,7 @@
 
 <div *ngIf="!firstVisit">
   <div *ngIf="dataReady">
-    <h3>ID: {{ form.id || formID }}</h3>
+    <h3>ID: {{ formID }}</h3>
     <div class="floating-button">
       <button type="button" mat-fab (click)="openDialog(newField,9,true)">
         <!-- Displays add field form -->
